# esmini

./: .gitignore  CLAUDE.md  CMakeLists.txt  build.ps1  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  build_log_5.txt  build_log_6.txt  build_log_7.txt  cmake_output.txt  cmake_output_2.txt  cmake_reconfig.txt  loader_log.txt  read_log.py  run_output.txt  temp_osi_object.h
DriverScript/: README.md  requirements.txt  setup.py
DriverScript/docs/: RealDriverAPI_Reference.md
DriverScript/examples/: debug_route_plot.py  gui_controller.py  lkas_example.py  modular_control_example.py  scenario_drive_example.py
DriverScript/osi3/: osi_common_pb2.py  osi_common_pb2.pyi  osi_datarecording_pb2.pyi  osi_detectedobject.proto  osi_detectedobject_pb2.pyi  osi_detectedtrafficsign.proto  osi_groundtruth_pb2.py  osi_hostvehicledata_pb2.py  osi_lane_pb2.pyi  osi_logicaldetectiondata.proto  osi_logicaldetectiondata_pb2.pyi  osi_logicallane.proto  osi_motionrequest_pb2.pyi  osi_object.proto  osi_object_pb2.py  osi_occupant.proto  osi_occupant_pb2.pyi  osi_referenceline.proto  osi_referenceline_pb2.py  osi_roadmarking_pb2.pyi  osi_route.proto  osi_sensordata_pb2.py  osi_sensordata_pb2.pyi  osi_sensorspecific.proto  osi_sensorview.proto  osi_sensorviewconfiguration.proto  osi_sensorviewconfiguration_pb2.py  osi_sensorviewconfiguration_pb2.pyi  osi_streamingupdate.proto  osi_trafficcommand_pb2.pyi  osi_trafficcommandupdate.proto  osi_trafficcommandupdate_pb2.pyi  osi_trafficlight.proto  osi_trafficsign.proto  osi_trafficsign_pb2.py  osi_version.proto  osi_version_pb2.py  osi_version_pb2.pyi
DriverScript/realdriver/: __init__.py  client.py  gt_rm_lib.py  lateral_controller.py  lkas.py  longitudinal_controller.py  osi_receiver.py  pid_controller.py  rm_lib.py  scenario_drive.py  simplified_router.py  udp_common.py  udp_receivers.py  vehicle_state.py  waypoint.py
EnvironmentSimulator/: CLAUDE.md
GT_OSMP_FMU/: CMakeLists.txt  FMU_Interface_Specification.md  esmini.cpp  esmini.h  modelDescription.in.xml  reals.xml
GT_esmini/: AutoLightController.cpp  AutoLightController.hpp  CLAUDE.md  CMakeLists.txt  ControllerRealDriver.cpp  ControllerRealDriver.hpp  ExtraAction.cpp  ExtraAction.hpp  ExtraEntities.cpp  ExtraEntities.hpp  GT_HostVehicleReporter.cpp  GT_HostVehicleReporter.hpp  GT_OSIReporter.cpp  GT_ScenarioReader.cpp  GT_ScenarioReader.hpp  GT_UDP.cpp  GT_UDP.hpp  GT_esminiLib.cpp  GT_esminiLib.hpp  GT_esminiRMLib.cpp  GT_esminiRMLib.hpp  README.md  RealVehicle.cpp  RealVehicle.hpp  TerrainTracker.cpp  TerrainTracker.hpp  build_output.txt  build_output2.txt  build_output_final.txt  host_vehicle_config.json  real_vehicle_params.json  real_vehicle_params_guide.md  temp_junction_logic.cpp
GT_esmini/GT_Sim/: CMakeLists.txt  main.cpp
GT_esmini/docs/: 01_overview.md  02_build_install.md  03_basic_usage.md  04_light_state_action.md  05_auto_light.md  06_osi_integration.md  07_examples.md  08_architecture.md  09_troubleshooting.md  10_api_reference.md  11_traffic_command_support.md  12_distribution_guide.md  13_fmi_support_investigation.md  14_external_control.md  README.md
GT_esmini/docs/user_manual/: external_trigger_mechanism.md  fmu_parameter_control.md
GT_esmini/script/: osi_error.txt  osi_output.txt  verify_error.txt  verify_ghost_trajectory.py  verify_osi_lights.py  verify_osi_lights2.py  verify_osi_ref.py
GT_esmini/scripts/: test_hostvehicledata.py
GT_esmini/test/: CMakeLists.txt
GT_esmini/test/integration/: GT_Loader.cpp
GT_esmini/test/scenarios/: autolight_test.xosc  autolight_test.xosc.temp.xosc  test_brake_lights.xosc  test_error_invalid_value.xosc  test_error_missing_attribute.xosc  test_indicators.xosc  test_multiple_lights.xosc
GT_esmini/test/unit/: simple_test.cpp  test_ScenarioReaderParsing.cpp
MySimulator/src/: main.cpp
plan/: 000_light_functionality_checklist.md  000_light_functionality_plan.md  001_Phase1_plan.md  001_Phase1_walkthrough.md  002_Phase2_Knowledge.md  002_Phase2_plan.md  002_Phase2_walkthrough.md  003_Phase3_postplan.md  003_Phase3_walkthrough.md  004_Phase4EX_revert_core_changes_plan.md  004_Phase4_walkthrough.md  004_build_modifications_traceability.md  100_issues.md
resources/xosc/: LaneChangeTest.xosc  SmoothBrakeTest.xosc  acc-test.xosc.temp.xosc  external_controller_test.xosc  lane_change_simple.xosc.temp.xosc  short_test.xosc  short_test.xosc.temp.xosc  test_real_driver_lights.xosc  traffic_lights.xosc  trailer_connect.xosc.temp.xosc
scripts/: create_make_project.sh  create_xcode_project.sh  verify_lane_change.py
scripts/driver_script/: ALKS_module.py  OSIReceiver.py  PIDController.py  RealDriverAPI_Reference.md  RealDriverClient.py  debug_udp_receiver.py  esminiRMLib.py  receive_target_speed.py  testUDP_RealDriver.py  test_UDP_RealDriver_ALKS.py
scripts/osi3/: osi_datarecording.proto  osi_detectedlane.proto  osi_detectedlane_pb2.pyi  osi_detectedobject_pb2.py  osi_detectedoccupant.proto  osi_detectedoccupant_pb2.pyi  osi_detectedroadmarking.proto  osi_detectedroadmarking_pb2.pyi  osi_detectedtrafficlight.proto  osi_detectedtrafficlight_pb2.pyi  osi_detectedtrafficsign_pb2.pyi  osi_environment.proto  osi_environment_pb2.pyi  osi_featuredata.proto  osi_featuredata_pb2.py  osi_featuredata_pb2.pyi  osi_groundtruth.proto  osi_groundtruth_pb2.pyi  osi_hostvehicledata.proto  osi_hostvehicledata_pb2.pyi  osi_lane.proto  osi_logicaldetectiondata_pb2.py  osi_logicallane_pb2.py  osi_logicallane_pb2.pyi  osi_motionrequest.proto  osi_motionrequest_pb2.py  osi_object_pb2.pyi  osi_referenceline_pb2.pyi  osi_roadmarking.proto  osi_route_pb2.py  osi_route_pb2.pyi  osi_sensordata.proto  osi_sensorspecific_pb2.pyi  osi_sensorview_pb2.pyi  osi_streamingupdate_pb2.py  osi_streamingupdate_pb2.pyi  osi_trafficcommand.proto  osi_trafficlight_pb2.pyi  osi_trafficsign_pb2.pyi  osi_trafficupdate.proto  (+1 more)
scripts/udp_driver/: RealDriverAPI_Reference.md  RealDriverClient.py  real_driver_test.xosc  simple_sender.py  testUDPDriver-print-osi-info-with-lights.py  testUDP_RealDriver.py  test_light_simple.py  test_osi_basic.py  test_osi_lights.py  (+1 more)
(+8 files in other folders)
